--- a/css/main.css
+++ b/css/main.css
@@ -1,114 +1,20 @@
-html,
-button,
-input,
-select,
-textarea {
-    color: #222;
-}
-
-html {
-    font-size: 1em;
-    line-height: 1.4;
-}
-
-::-moz-selection {
-    background: #b3d4fc;
-    text-shadow: none;
-}
-
-::selection {
-    background: #b3d4fc;
-    text-shadow: none;
-}
-
-hr {
-    display: block;
-    height: 1px;
-    border: 0;
-    border-top: 1px solid #ccc;
-    margin: 1em 0;
-    padding: 0;
-}
-
-audio,
-canvas,
-img,
-video {
-    vertical-align: middle;
-}
-
-fieldset {
-    border: 0;
-    margin: 0;
-    padding: 0;
-}
-
-textarea {
-    resize: vertical;
-}
-
-.browsehappy {
-    margin: 0.2em 0;
-    background: #ccc;
-    color: #000;
-    padding: 0.2em 0;
-}
+@import url(http://fonts.googleapis.com/css?family=RobotoDraft:500);
+html,button,input,select,textarea{color:#222;}
+html{font-size:1em;line-height:1.4;}
+::-moz-selection{background:#b3d4fc;text-shadow:none;}
+::selection{background:#b3d4fc;text-shadow:none;}
+hr{display:block;height:1px;border:0;border-top:1px solid #ccc;margin:1em 0;padding:0;}
+audio,canvas,img,video{vertical-align:middle;}
+fieldset{border:0;margin:0;padding:0;}
+textarea{resize:vertical;}
+.browsehappy{margin:.2em 0;background:#ccc;color:#000;padding:.2em 0;}
 /* ==========================================================================
    CHECKBOXES
-   ========================================================================== */
-@import url(http://fonts.googleapis.com/css?family=RobotoDraft:500);
-
-*
-{
-  font-family: 'RobotoDraft', sans-serif;
-  font-size: 15px;
-}
-.material_checkbox
-{
-  position: relative;
-  margin: 25px!important;
-}
-
-.material_checkbox:before
-{
-  border: 2px solid #ccc;
-  content: "";
-  cursor: pointer;
-  display: block;
-  height: 15px;
-  position: absolute;
-  -moz-transition: all 0.3s ease-in-out;
-  -o-transition: all 0.3s ease-in-out;
-  -webkit-transition: all 0.3s ease-in-out;
-  transition: all 0.3s ease-in-out;
-  width: 15px;
-  z-index: 1;
-}
-
-.material_checkbox:checked:before
-{
-  border-top-style: none;
-  border-right-style: none;
-  height: 10px;
-  -moz-transform: rotate(-45deg);
-  -ms-transform: rotate(-45deg);
-  -o-transform: rotate(-45deg);
-  -webkit-transform: rotate(-45deg);
-  transform: rotate(-45deg);
-}
-
-.material_checkbox:after
-{
-  background: #fff;
-  content: "";
-  display: block;
-  height: 15px;
-  position: absolute;
-  top: 0;
-  width: 15px;
-  z-index: 0;
-}
-
+   ========================================================================== */*{font-family:RobotoDraft, sans-serif;font-size:15px;}
+.material_checkbox{position:relative;margin:25px!important;}
+.material_checkbox:before{border:2px solid #ccc;content:"";cursor:pointer;display:block;height:15px;position:absolute;-moz-transition:all .3s ease-in-out;-o-transition:all .3s ease-in-out;-webkit-transition:all .3s ease-in-out;transition:all .3s ease-in-out;width:15px;z-index:1;}
+.material_checkbox:checked:before{border-top-style:none;border-right-style:none;height:10px;-moz-transform:rotate(-45deg);-ms-transform:rotate(-45deg);-o-transform:rotate(-45deg);-webkit-transform:rotate(-45deg);transform:rotate(-45deg);}
+.material_checkbox:after{background:#fff;content:"";display:block;height:15px;position:absolute;top:0;width:15px;z-index:0;}
 .material_checkbox:nth-child(1):checked:before{border-color:#e51c23;}
 .material_checkbox:nth-child(3):checked:before{border-color:#e91e63;}
 .material_checkbox:nth-child(5):checked:before{border-color:#9c27b0;}
@@ -130,398 +36,95 @@ textarea {
 .material_checkbox:nth-child(37):checked:before{border-color:#607d8b;}
 /* ==========================================================================
    LOADING SPINNER
-   ========================================================================== */
-body {
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-justify-content: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+   ========================================================================== */body{display:0;display:0;display:flex;-webkit-align-items:center;-ms-flex-align:center;align-items:center;-webkit-justify-content:center;-ms-flex-pack:center;justify-content:center;}
+.spinner{-webkit-animation:rotator 1.4s linear infinite;animation:rotator 1.4s linear infinite;}
+@-webkit-keyframes rotator{0-webkit-transform:rotate(0deg);transform:rotate(0deg);}
+100%{-webkit-transform:rotate(270deg);transform:rotate(270deg);}
 }
-
-.spinner {
-  -webkit-animation: rotator 1.4s linear infinite;
-          animation: rotator 1.4s linear infinite;
+@keyframes rotator{0-webkit-transform:rotate(0deg);transform:rotate(0deg);}
+100%{-webkit-transform:rotate(270deg);transform:rotate(270deg);}
 }
-
-@-webkit-keyframes rotator {
-  0% {
-    -webkit-transform: rotate(0deg);
-            transform: rotate(0deg);
-  }
-  100% {
-    -webkit-transform: rotate(270deg);
-            transform: rotate(270deg);
-  }
+.path{stroke-dasharray:187;stroke-dashoffset:0;-webkit-transform-origin:center;-ms-transform-origin:center;transform-origin:center;-webkit-animation:dash 1.4s ease-in-out infinite, colors 5.6s ease-in-out infinite;animation:dash 1.4s ease-in-out infinite, colors 5.6s ease-in-out infinite;}
+@-webkit-keyframes colors{0stroke:#4285F4;}
+25%{stroke:#DE3E35;}
+50%{stroke:#F7C223;}
+75%{stroke:#1B9A59;}
+100%{stroke:#4285F4;}
 }
-
-@keyframes rotator {
-  0% {
-    -webkit-transform: rotate(0deg);
-            transform: rotate(0deg);
-  }
-  100% {
-    -webkit-transform: rotate(270deg);
-            transform: rotate(270deg);
-  }
+@keyframes colors{0stroke:#4285F4;}
+25%{stroke:#DE3E35;}
+50%{stroke:#F7C223;}
+75%{stroke:#1B9A59;}
+100%{stroke:#4285F4;}
 }
-.path {
-  stroke-dasharray: 187;
-  stroke-dashoffset: 0;
-  -webkit-transform-origin: center;
-      -ms-transform-origin: center;
-          transform-origin: center;
-  -webkit-animation: dash 1.4s ease-in-out infinite, colors 5.6s ease-in-out infinite;
-          animation: dash 1.4s ease-in-out infinite, colors 5.6s ease-in-out infinite;
+@-webkit-keyframes dash{0stroke-dashoffset:187;}
+50%{stroke-dashoffset:46.75;-webkit-transform:rotate(135deg);transform:rotate(135deg);}
+100%{stroke-dashoffset:187;-webkit-transform:rotate(450deg);transform:rotate(450deg);}
 }
-
-@-webkit-keyframes colors {
-  0% {
-    stroke: #4285F4;
-  }
-  25% {
-    stroke: #DE3E35;
-  }
-  50% {
-    stroke: #F7C223;
-  }
-  75% {
-    stroke: #1B9A59;
-  }
-  100% {
-    stroke: #4285F4;
-  }
+@keyframes dash{0stroke-dashoffset:187;}
+50%{stroke-dashoffset:46.75;-webkit-transform:rotate(135deg);transform:rotate(135deg);}
+100%{stroke-dashoffset:187;-webkit-transform:rotate(450deg);transform:rotate(450deg);}
 }
-
-@keyframes colors {
-  0% {
-    stroke: #4285F4;
-  }
-  25% {
-    stroke: #DE3E35;
-  }
-  50% {
-    stroke: #F7C223;
-  }
-  75% {
-    stroke: #1B9A59;
-  }
-  100% {
-    stroke: #4285F4;
-  }
-}
-@-webkit-keyframes dash {
-  0% {
-    stroke-dashoffset: 187;
-  }
-  50% {
-    stroke-dashoffset: 46.75;
-    -webkit-transform: rotate(135deg);
-            transform: rotate(135deg);
-  }
-  100% {
-    stroke-dashoffset: 187;
-    -webkit-transform: rotate(450deg);
-            transform: rotate(450deg);
-  }
-}
-@keyframes dash {
-  0% {
-    stroke-dashoffset: 187;
-  }
-  50% {
-    stroke-dashoffset: 46.75;
-    -webkit-transform: rotate(135deg);
-            transform: rotate(135deg);
-  }
-  100% {
-    stroke-dashoffset: 187;
-    -webkit-transform: rotate(450deg);
-            transform: rotate(450deg);
-  }
-}
-
 /* ==========================================================================
    Menu
-   ========================================================================== */
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-}
-body {
-  font-family: 'Roboto', sans-serif;
-  color: #666666;
-  line-height: 1.5em;
-  position: relative;
-}
-.navOpen {
-  overflow: hidden;
-}
-.wrapper {
-  transition-duration: 0.5s;
-  transition-timing-function: swing;
-  background-color: white;
-  width: 100%;
-  height: 100%;
-  position: relative;
-  padding: 100px 40px;
-}
-.wrapper.open {
-  transform: translateX(250px) translateY(50px);
-  -webkit-transform: translateX(250px) translateY(50px);
-  box-shadow: 0 0 50px rgba(0, 0, 0, 0.2);
-}
-.wrapper section {
-  max-width: 600px;
-  margin: 0 auto;
-}
-.wrapper section h1 {
-  font-weight: 300;
-  font-size: 30px;
-  margin-bottom: 10px;
-}
-.wrapper section h2 {
-  font-weight: 300;
-  font-size: 20px;
-  margin-bottom: 40px;
-}
-.wrapper section p {
-  margin-bottom: 40px;
-}
-.openNav {
-  transition-duration: 0.5s;
-  transition-timing-function: swing;
-  width: 50px;
-  height: 50px;
-  background-color: #14B9FF;
-  position: fixed;
-  top: 20px;
-  left: 20px;
-  z-index: 9;
-}
-.openNav:hover {
-  cursor: pointer;
-}
-.openNav .icon {
-  transition-duration: 0.2s;
-  position: absolute;
-  width: 30px;
-  height: 2px;
-  background-color: white;
-  top: 24px;
-  left: 10px;
-}
-.openNav .icon:before,
-.openNav .icon:after {
-  transition-duration: 0.5s;
-  background-color: white;
-  position: absolute;
-  content: "";
-  width: 30px;
-  height: 2px;
-  left: 0px;
-}
-.openNav .icon:before {
-  top: -7px;
-}
-.openNav .icon:after {
-  top: 7px;
-}
-.openNav.open {
-  transform: translateX(250px) translateY(50px);
-  -webkit-transform: translateX(250px) translateY(50px);
-}
-.openNav.open .icon {
-  background-color: transparent;
-}
-.openNav.open .icon:before,
-.openNav.open .icon:after {
-  top: 0;
-}
-.openNav.open .icon:before {
-  transform: rotate(-45deg);
-  -webkit-transform: rotate(-45deg);
-}
-.openNav.open .icon:after {
-  transform: rotate(45deg);
-  -webkit-transform: rotate(45deg);
-}
-nav {
-  background-color: #14B9FF;
-  width: 100%;
-  height: 100%;
-  position: fixed;
-  left: 0;
-  top: 0;
-}
-nav ul {
-  width: 250px;
-  margin-top: 50px;
-}
-nav ul:hover li {
-  color: rgba(255, 255, 255, 0.5);
-}
-nav ul li {
-  transition-duration: 0.25s;
-  display: block;
-  padding: 5px 40px;
-  color: white;
-  letter-spacing: 0.02em;
-  text-align: right;
-}
-nav ul li:hover {
-  cursor: pointer;
-  color: white;
-}
-nav.open {
-  margin-left: 0px;
-}
-
+   ========================================================================== */*{padding:0;margin:0;box-sizing:border-box;}
+body{font-family:Roboto, sans-serif;color:#666666;line-height:1.5em;position:relative;}
+.navOpen{overflow:hidden;}
+.wrapper{transition-duration:.5s;transition-timing-function:swing;background-color:white;width:100%;height:100%;position:relative;padding:100px 40px;}
+.wrapper.open{transform:translateX(250px) translateY(50px);-webkit-transform:translateX(250px) translateY(50px);box-shadow:0 0 50px rgba(0,0,0,0.2);}
+.wrapper section{max-width:600px;margin:0 auto;}
+.wrapper section h1{font-weight:300;font-size:30px;margin-bottom:10px;}
+.wrapper section h2{font-weight:300;font-size:20px;margin-bottom:40px;}
+.wrapper section p{margin-bottom:40px;}
+.openNav{transition-duration:.5s;transition-timing-function:swing;width:50px;height:50px;background-color:#14B9FF;position:fixed;top:20px;left:20px;z-index:9;}
+.openNav:hover{cursor:pointer;}
+.openNav .icon{transition-duration:.2s;position:absolute;width:30px;height:2px;background-color:white;top:24px;left:10px;}
+.openNav .icon:before,.openNav .icon:after{transition-duration:.5s;background-color:white;position:absolute;content:"";width:30px;height:2px;left:0;}
+.openNav .icon:before{top:-7px;}
+.openNav .icon:after{top:7px;}
+.openNav.open{transform:translateX(250px) translateY(50px);-webkit-transform:translateX(250px) translateY(50px);}
+.openNav.open .icon{background-color:transparent;}
+.openNav.open .icon:before,.openNav.open .icon:after{top:0;}
+.openNav.open .icon:before{transform:rotate(-45deg);-webkit-transform:rotate(-45deg);}
+.openNav.open .icon:after{transform:rotate(45deg);-webkit-transform:rotate(45deg);}
+nav{background-color:#14B9FF;width:100%;height:100%;position:fixed;left:0;top:0;}
+nav ul{width:250px;margin-top:50px;}
+nav ul:hover li{color:rgba(255,255,255,0.5);}
+nav ul li{transition-duration:.25s;display:block;padding:5px 40px;color:white;letter-spacing:.02em;text-align:right;}
+nav ul li:hover{cursor:pointer;color:white;}
+nav.open{margin-left:0;}
 /* ==========================================================================
    Media Queries
-   ========================================================================== */
-
-@media only screen and (min-width: 35em) {
+   ========================================================================== */@media only screen and min-width 35em {
 
 }
-
-@media print,
-       (-o-min-device-pixel-ratio: 5/4),
-       (-webkit-min-device-pixel-ratio: 1.25),
-       (min-resolution: 120dpi) {
+@media print,-o-min-device-pixel-ratio 54,-webkit-min-device-pixel-ratio 125,min-resolution 120dpi {
 
 }
-
 /* ==========================================================================
    Helper classes
-   ========================================================================== */
-
-.ir {
-    background-color: transparent;
-    border: 0;
-    overflow: hidden;
-    *text-indent: -9999px;
-}
-
-.ir:before {
-    content: "";
-    display: block;
-    width: 0;
-    height: 150%;
-}
-
-.hidden {
-    display: none !important;
-    visibility: hidden;
-}
-
-.visuallyhidden {
-    border: 0;
-    clip: rect(0 0 0 0);
-    height: 1px;
-    margin: -1px;
-    overflow: hidden;
-    padding: 0;
-    position: absolute;
-    width: 1px;
-}
-
-.visuallyhidden.focusable:active,
-.visuallyhidden.focusable:focus {
-    clip: auto;
-    height: auto;
-    margin: 0;
-    overflow: visible;
-    position: static;
-    width: auto;
-}
-
-.invisible {
-    visibility: hidden;
-}
-
-.clearfix:before,
-.clearfix:after {
-    content: " ";
-    display: table;
-}
-
-.clearfix:after {
-    clear: both;
-}
-
-.clearfix {
-    *zoom: 1;
-}
-
+   ========================================================================== */.ir{background-color:transparent;border:0;overflow:hidden;text-indent:-9999px;}
+.ir:before{content:"";display:block;width:0;height:150%;}
+.hidden{display:none!important;visibility:hidden;}
+.visuallyhidden{border:0;clip:rect(0000);height:1px;margin:-1px;overflow:hidden;padding:0;position:absolute;width:1px;}
+.visuallyhidden.focusable:active,.visuallyhidden.focusable:focus{clip:auto;height:auto;margin:0;overflow:visible;position:static;width:auto;}
+.invisible{visibility:hidden;}
+.clearfix:before,.clearfix:after{content:" ";display:table;}
+.clearfix:after{clear:both;}
+.clearfix{zoom:1;}
 /* ==========================================================================
    Print styles
-   ========================================================================== */
-
-@media print {
-    * {
-        background: transparent !important;
-        color: #000 !important;
-        box-shadow: none !important;
-        text-shadow: none !important;
-    }
-
-    a,
-    a:visited {
-        text-decoration: underline;
-    }
-
-    a[href]:after {
-        content: " (" attr(href) ")";
-    }
-
-    abbr[title]:after {
-        content: " (" attr(title) ")";
-    }
-
-    .ir a:after,
-    a[href^="javascript:"]:after,
-    a[href^="#"]:after {
-        content: "";
-    }
-
-    pre,
-    blockquote {
-        border: 1px solid #999;
-        page-break-inside: avoid;
-    }
-
-    thead {
-        display: table-header-group;
-    }
-
-    tr,
-    img {
-        page-break-inside: avoid;
-    }
-
-    img {
-        max-width: 100% !important;
-    }
-
-    @page {
-        margin: 0.5cm;
-    }
-
-    p,
-    h2,
-    h3 {
-        orphans: 3;
-        widows: 3;
-    }
-
-    h2,
-    h3 {
-        page-break-after: avoid;
-    }
+   ========================================================================== */@media print {
+*{background:transparent!important;color:#000!important;box-shadow:none!important;text-shadow:none!important;}
+a,a:visited{text-decoration:underline;}
+a[href]:after{content:" (" attr(href) ")";}
+abbr[title]:after{content:" (" attr(title) ")";}
+.ir a:after,a[href^=javascript:]:after,a[href^=#]:after{content:"";}
+pre,blockquote{border:1px solid #999;page-break-inside:avoid;}
+thead{display:table-header-group;}
+tr,img{page-break-inside:avoid;}
+img{max-width:100%!important;}
+@page{margin:.5cm;}
+p,h2,h3{orphans:3;widows:3;}
+h2,h3{page-break-after:avoid;}
 }
