--- a/css/main.css
+++ b/css/main.css
@@ -36,34 +36,122 @@ textarea{resize:vertical;}
 .material_checkbox:nth-child(37):checked:before{border-color:#607d8b;}
 /* ==========================================================================
    LOADING SPINNER
-   ========================================================================== */body{display:0;display:0;display:flex;-webkit-align-items:center;-ms-flex-align:center;align-items:center;-webkit-justify-content:center;-ms-flex-pack:center;justify-content:center;}
-.spinner{-webkit-animation:rotator 1.4s linear infinite;animation:rotator 1.4s linear infinite;}
-@-webkit-keyframes rotator{0-webkit-transform:rotate(0deg);transform:rotate(0deg);}
-100%{-webkit-transform:rotate(270deg);transform:rotate(270deg);}
+   ========================================================================== */
+/* ==========================================================================
+   LOADING SPINNER
+   ========================================================================== */
+body {
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
-@keyframes rotator{0-webkit-transform:rotate(0deg);transform:rotate(0deg);}
-100%{-webkit-transform:rotate(270deg);transform:rotate(270deg);}
+
+.spinner {
+  -webkit-animation: rotator 1.4s linear infinite;
+          animation: rotator 1.4s linear infinite;
 }
-.path{stroke-dasharray:187;stroke-dashoffset:0;-webkit-transform-origin:center;-ms-transform-origin:center;transform-origin:center;-webkit-animation:dash 1.4s ease-in-out infinite, colors 5.6s ease-in-out infinite;animation:dash 1.4s ease-in-out infinite, colors 5.6s ease-in-out infinite;}
-@-webkit-keyframes colors{0stroke:#4285F4;}
-25%{stroke:#DE3E35;}
-50%{stroke:#F7C223;}
-75%{stroke:#1B9A59;}
-100%{stroke:#4285F4;}
+
+@-webkit-keyframes rotator {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(270deg);
+            transform: rotate(270deg);
+  }
 }
-@keyframes colors{0stroke:#4285F4;}
-25%{stroke:#DE3E35;}
-50%{stroke:#F7C223;}
-75%{stroke:#1B9A59;}
-100%{stroke:#4285F4;}
+
+@keyframes rotator {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(270deg);
+            transform: rotate(270deg);
+  }
 }
-@-webkit-keyframes dash{0stroke-dashoffset:187;}
-50%{stroke-dashoffset:46.75;-webkit-transform:rotate(135deg);transform:rotate(135deg);}
-100%{stroke-dashoffset:187;-webkit-transform:rotate(450deg);transform:rotate(450deg);}
+.path {
+  stroke-dasharray: 187;
+  stroke-dashoffset: 0;
+  -webkit-transform-origin: center;
+      -ms-transform-origin: center;
+          transform-origin: center;
+  -webkit-animation: dash 1.4s ease-in-out infinite, colors 5.6s ease-in-out infinite;
+          animation: dash 1.4s ease-in-out infinite, colors 5.6s ease-in-out infinite;
 }
-@keyframes dash{0stroke-dashoffset:187;}
-50%{stroke-dashoffset:46.75;-webkit-transform:rotate(135deg);transform:rotate(135deg);}
-100%{stroke-dashoffset:187;-webkit-transform:rotate(450deg);transform:rotate(450deg);}
+
+@-webkit-keyframes colors {
+  0% {
+    stroke: #4285F4;
+  }
+  25% {
+    stroke: #DE3E35;
+  }
+  50% {
+    stroke: #F7C223;
+  }
+  75% {
+    stroke: #1B9A59;
+  }
+  100% {
+    stroke: #4285F4;
+  }
+}
+
+@keyframes colors {
+  0% {
+    stroke: #4285F4;
+  }
+  25% {
+    stroke: #DE3E35;
+  }
+  50% {
+    stroke: #F7C223;
+  }
+  75% {
+    stroke: #1B9A59;
+  }
+  100% {
+    stroke: #4285F4;
+  }
+}
+@-webkit-keyframes dash {
+  0% {
+    stroke-dashoffset: 187;
+  }
+  50% {
+    stroke-dashoffset: 46.75;
+    -webkit-transform: rotate(135deg);
+            transform: rotate(135deg);
+  }
+  100% {
+    stroke-dashoffset: 187;
+    -webkit-transform: rotate(450deg);
+            transform: rotate(450deg);
+  }
+}
+@keyframes dash {
+  0% {
+    stroke-dashoffset: 187;
+  }
+  50% {
+    stroke-dashoffset: 46.75;
+    -webkit-transform: rotate(135deg);
+            transform: rotate(135deg);
+  }
+  100% {
+    stroke-dashoffset: 187;
+    -webkit-transform: rotate(450deg);
+            transform: rotate(450deg);
+  }
 }
 /* ==========================================================================
    Menu
