--- a/css/main.css
+++ b/css/main.css
@@ -8,9 +8,28 @@ audio,canvas,img,video{vertical-align:middle;}
 fieldset{border:0;margin:0;padding:0;}
 textarea{resize:vertical;}
 .browsehappy{margin:.2em 0;background:#ccc;color:#000;padding:.2em 0;}
+
+/* ==========================================================================
+   MODAL
+   ========================================================================== */
+.bs-component {
+    position: relative;
+}
+.bs-component .modal {
+    position: relative;
+    top: auto;
+    right: auto;
+    left: auto;
+    bottom: auto;
+    z-index: 1;
+    display: block;
+}
+.bs-component .modal-dialog {
+    width: 90%}
 /* ==========================================================================
    CHECKBOXES
-   ========================================================================== */*{font-family:RobotoDraft, sans-serif;font-size:15px;}
+   ========================================================================== */
+*{font-family:RobotoDraft, sans-serif;font-size:15px;}
 .material_checkbox{position:relative;margin:25px!important;}
 .material_checkbox:before{border:2px solid #ccc;content:"";cursor:pointer;display:block;height:15px;position:absolute;-moz-transition:all .3s ease-in-out;-o-transition:all .3s ease-in-out;-webkit-transition:all .3s ease-in-out;transition:all .3s ease-in-out;width:15px;z-index:1;}
 .material_checkbox:checked:before{border-top-style:none;border-right-style:none;height:10px;-moz-transform:rotate(-45deg);-ms-transform:rotate(-45deg);-o-transform:rotate(-45deg);-webkit-transform:rotate(-45deg);transform:rotate(-45deg);}
@@ -34,9 +53,6 @@ textarea{resize:vertical;}
 .material_checkbox:nth-child(33):checked:before{border-color:#795548;}
 .material_checkbox:nth-child(35):checked:before{border-color:#9e9e9e;}
 .material_checkbox:nth-child(37):checked:before{border-color:#607d8b;}
-/* ==========================================================================
-   LOADING SPINNER
-   ========================================================================== */
 /* ==========================================================================
    LOADING SPINNER
    ========================================================================== */
@@ -153,6 +169,7 @@ body {
             transform: rotate(450deg);
   }
 }
+
 /* ==========================================================================
    Menu
    ========================================================================== */*{padding:0;margin:0;box-sizing:border-box;}
@@ -182,14 +199,6 @@ nav ul li{transition-duration:.25s;display:block;padding:5px 40px;color:white;le
 nav ul li:hover{cursor:pointer;color:white;}
 nav.open{margin-left:0;}
 /* ==========================================================================
-   Media Queries
-   ========================================================================== */@media only screen and min-width 35em {
-
-}
-@media print,-o-min-device-pixel-ratio 54,-webkit-min-device-pixel-ratio 125,min-resolution 120dpi {
-
-}
-/* ==========================================================================
    Helper classes
    ========================================================================== */.ir{background-color:transparent;border:0;overflow:hidden;text-indent:-9999px;}
 .ir:before{content:"";display:block;width:0;height:150%;}
@@ -200,19 +209,3 @@ nav.open{margin-left:0;}
 .clearfix:before,.clearfix:after{content:" ";display:table;}
 .clearfix:after{clear:both;}
 .clearfix{zoom:1;}
-/* ==========================================================================
-   Print styles
-   ========================================================================== */@media print {
-*{background:transparent!important;color:#000!important;box-shadow:none!important;text-shadow:none!important;}
-a,a:visited{text-decoration:underline;}
-a[href]:after{content:" (" attr(href) ")";}
-abbr[title]:after{content:" (" attr(title) ")";}
-.ir a:after,a[href^=javascript:]:after,a[href^=#]:after{content:"";}
-pre,blockquote{border:1px solid #999;page-break-inside:avoid;}
-thead{display:table-header-group;}
-tr,img{page-break-inside:avoid;}
-img{max-width:100%!important;}
-@page{margin:.5cm;}
-p,h2,h3{orphans:3;widows:3;}
-h2,h3{page-break-after:avoid;}
-}
